--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,11 @@
-/*globel*/
-
 *{
-	background-origin: border-box;
+	box-sizing: border-box;
 	position: relative;
 }
 
 html,body{
-	font-family: '微軟正黑體'arial;
+	font-family: '微黑正黑體',arial;
 }
-
 h1,h2,h3,h4,h5,h6,p{
 	padding: 0;
 	margin: 0;
@@ -21,18 +18,19 @@ ul{
 }
 
 a{
-
 	text-decoration: none;
+	color: #333;
 }
 
-/* lay out */
+
 .container{
 	width: 1200px;
-	margin: 0 auto;
+	margin: 0  auto;
 	height: 100%;
 
-	margin-left: 16px;
-	margin-right: 16px;
+	padding-left: 16px;
+	padding-right: 16px;
+
 }
 
 .row{
@@ -46,24 +44,25 @@ a{
 	clear: both;
 }
 
-.color-1-2,.color-1-3,.color-1-4{
-	float: left;
+.col-1-2,.col-1-3,.col-1-4{
+	float:left;
 	padding-left: 16px;
 	padding-right: 16px;
-
 }
 
-.color-1-2{
+.col-1-2{
 	width: 50%;
 }
-.color-1-3{
-	width: 33.333333;
+
+.col-1-3{
+	width: 33.333333%;
 }
-.color-1-4{
+
+.col-1-4{
 	width: 25%;
 }
 
-/* hero  */
+/*hero*/
 .hero{
 	padding-top: 200px;
 	padding-bottom: 200px;
@@ -73,11 +72,12 @@ a{
 	background-color: #fefefe;
 }
 
-.hero-bg-gray{
-    background-color: #efefef;
+.hero-bg-grey{
+	background-color: #efefef;
 }
 
-/* navbar */
+
+/*navbar*/
 .navbar{
 	height: 64px;
 	width: 100%;
@@ -88,74 +88,66 @@ a{
 	left: 0;
 	z-index: 500;
 }
-
+          
 .brand{
 	display: inline-block;
 	width: 164px;
 	height: 64px;
-	background-color: url('../images/common/logo.jpg');
+	background-image: url('../images/common/meowlogo2.png');
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
 }
 
 .nav{
-
 	float: right;
-}
 
+}
 .nav-item{
-
 	float: left;
-}
 
+}
 .nav-link{
 	display: inline-block;
 	line-height: 24px;
 	padding: 20px 16px;
-	color: #fff;
-	transition: all 0.3s;
+    color: #fefefe;
+    transition: all 0.3s;
 }
-
 .nav-link:hover{
-	color: #d5a26f;
-
+	color:#d5a26f;
 }
-
-/* jumbotron */
 
 .jumbotron{
-	padding-top: 224px;
+	padding-top:224px;
 	padding-bottom: 160px;
-	border: 1px solid #000;
 
-	background-image: url('../images/bg/bg001.jpg');
+	background-image: url('../images/bg/bgcatback.jpg'); 
 	background-position: center;
 	background-size: cover;
 	background-attachment: fixed;
 }
 
-.jumbotron .logo-image{
+
+.logo-image{
 	width: 320px;
 	height: 320px;
 	margin: 0 auto;
-
-	background-image: url('../images/common/logo-w.png');
-	background-position: center;
+	background-image: url('../images/common/meowlogo2.png');
+	background-position: center; 
 	background-size: contain;
 }
-
-/* mask-dark */
+   
 .mask-dark{
 	position: absolute;
-	top: 0;
+	top:0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0,0,0,0.7);
 }
 
-/* btn  */
+/*btn*/
 .btn{
 	display: inline-block;
 	font-size: 16px;
@@ -164,43 +156,44 @@ a{
 	border-radius: 4px;
 	transition: all 0.3s;
 
-	/*background-color: #333;
-	color: #fff;*/
-
+	margin-right: 12px;
+	margin-left: 12px;
+	
 }
 
 .btn-center{
 	text-align: center;
 
 }
+.btn-lg{
+	padding: 8px 32px;
+}
+
 
 .btn-primary{
-	background-color: #d5a26f;
+	background-color:#afd07e;
 	color: #fefefe;
 }
 
 .btn-primary:hover{
-
-	background-color: #b2875c;
+	background-color:#5c842a;
 }
 
 .btn-secondary{
-	border: 1px solid #d5a26f;
-	color: #d5a26f;
-	
+	border: 1px solid #afd07e;
+	color:#afd07e;
 }
 
 .btn-secondary:hover{
-
-	background-color: #d5a26f;
-	color: #fefefe;
+	background-color: #5c842a;
+	color:#fefefe;
 }
 
 .about-preview .title{
 	font-size: 32px;
 	color: #333;
-	margin-bottom: 24px;
 	margin-top: 80px;
+	margin-bottom: 24px;
 }
 
 .about-preview .para{
@@ -210,9 +203,9 @@ a{
 	margin-bottom: 24px;
 }
 
-/* image-container */
 .image-container{
 	border: 1px solid blue;
+
 }
 
 .image-container:before{
@@ -228,11 +221,30 @@ a{
 	left: 0;
 	width: 100%;
 	height: 100%;
-	
+
+	/*border: 1px solid yellow;*/
+
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
+	
 }
+
+
+.about-preview .title{
+	font-size: 32px;
+	color: #333;
+	margin-bottom: 24px;
+	margin-top: 80px;
+}
+
+.about-preview .para{
+	font-size: 16px;
+	line-height: 32px;
+	color: #333;
+	margin-bottom: 24px;
+}
+
 
 .section-intro{
 	text-align: center;
@@ -243,11 +255,36 @@ a{
 	color: #333;
 	margin-bottom: 24px;
 }
+
 .section-intro .para{
 	font-size: 16px;
 	line-height: 32px;
 	color: #333;
-	font-size: 16px;
+}
+
+.service-item .preview{
+	padding-top: 16px;
+}
+
+.service-item .title{
+	font-size: 24px;
+	margin-bottom: 8px;
+	color: #333;
+
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.service-item .subtitle{
+	font-size: 14px;
+	color: #d5a26f;
+	margin-bottom: 16px;
+}
+
+.service-item .para{
+	font-size: 16px;	
+	color:#333;
 	line-height: 24px;
 	margin-bottom: 24px;
 
@@ -255,8 +292,9 @@ a{
 	overflow: hidden;
 }
 
+
 .reservation{
-	background-image: url('../images/bg/bg002.jpg');
+	background-image: url('../images/bg/meowlogo2.png');
 	background-position: center;
 	background-size: cover;
 	background-attachment: fixed;
@@ -269,6 +307,7 @@ a{
 .reservation .section-intro .para{
 	color: #fefefe;
 }
+
 
 .menu-list{
 	margin-bottom: 64px;
@@ -320,7 +359,6 @@ a{
 
 .menu-list .list-item .image-container:before{
 	padding-top: 100%;
-
 }
 
 .menu-list .list-item .title{
@@ -330,46 +368,87 @@ a{
 	margin-bottom: 8px;
 }
 
-.service-item .preview{
-	padding-top: 16px;
-}
-
-.service-item .title{
-	font-size: 24px;
-	margin-bottom: 8px;
-	color: #333;
-
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
-
-}
-
-.service-item .subtitle{
+.menu-list .list-item .subtitle{
+	color: #d5a26f;
 	font-size: 14px;
+}
+
+
+.contact-info{
+	padding-top: 40px;
+}
+
+.contact-info .info-item{
+	margin-bottom: 24px;
+}
+
+.contact-info .info-item .title{
 	color: #d5a26f;
 	margin-bottom: 16px;
 }
 
-.service-item .para{
-	font-size: 16px;
-	color: #333;
-	margin-bottom: 24px;
-
-	line-height: 24px;
-	height: 72px;
-	overflow: hidden;
+.contact-info .info-item .title span{
+	display: inline-block;
+	border-bottom: 2px solid #d5a26f;
+	line-height: 36px;
 }
 
+.contact-info .info-item .info{
+	line-height: 32px;
+}
 
+.map-container{
+	width: 100%;
+	padding-top:75%;
+}
 
+.map-container iframe{
+	position: absolute;
+	top: 0;
+	left: 0;
+}
 
+.footer{
+	background-image: url('../images/common/logo.jpg');
+	background-position: center;
+	background-size: cover;
+	background-attachment: fixed;
+}
 
+.footer .brand{
+	width: 240px;
+	height: 240px;
+	display: block;
+	background-image: url('../images/common/meowlogo2.png');
+	background-position: center;
+	background-size: contain;
+	margin: 0 auto;
+}
 
+.footer .nav{
+	display: flex;
+	justify-content: center;
+}
 
+.footer .nav .nav-item .nav-link{
+	color: #fefefe;
+	padding: 24px;
+	line-height: 24px;
+	transition: all 0.3s;
+}
 
+.footer .nav .nav-item .nav-link:hover{
+	color: #d5a26f;
+}
 
-
+.footer .copyright{
+	background-color: rgba(0,0,0,0,0.8);
+	color: #ddd;
+	text-align: center;
+	line-height: 24px;
+	padding: 16px 0;
+	font-size: : 14px;
+}
 
 
 
